FoodExpress - Deployment ready with environment variables and security updates

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "food-del-backend",
+  "name": "foodexpress-backend",
   "version": "1.0.0",
   "description": "",
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
